# tinyengine

./: CMakeLists.txt
src/: Game.cpp  Game.h  Logger.cpp
src/ECS/: ECS.cpp  ECS.h
src/Game/: Game.h
src/Systems/: MovementSystem.h
